# LumixTetherController

./: .gitignore  AGENTIC_GUIDE.md  README.md  agentic_camera.py  build.bat  build.py  demo_agentic.py  inspect_all_windows.py  inspect_main.py  inspect_tether.py  lumix_calibration.json  lumix_controls.py  lumix_sdk.py  main.py  pyproject.toml  visual_inspect.py
LumixRemoteControlLibraryBeta1.00/Document/: Lumix Remote Control Library API Specification.html
LumixRemoteControlLibraryBeta1.00/TetherSDKSample/: Sample.sln
LumixRemoteControlLibraryBeta1.00/TetherSDKSample/ActionParameters01/: ActionParameters01.vcxproj  main.cpp
LumixRemoteControlLibraryBeta1.00/TetherSDKSample/GetSetParameters01/: GetSetParameters01.vcxproj  main.cpp
LumixRemoteControlLibraryBeta1.00/TetherSDKSample/LiveView01/: LiveView01.cpp  LiveView01.h  LiveView01.rc  LiveView01.vcxproj  LiveView01.vcxproj.filters  LiveView01Dlg.cpp  LiveView01Dlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h  targetver.h
LumixRemoteControlLibraryBeta1.00/TetherSDKSample/LiveView01/res/: LiveView01.rc2
