[project]
name = "windowscontrol"
version = "0.1.0"
description = "LUMIX Tether Bridge - Control GH5M2 via LUMIX Tether desktop application"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
keywords = ["LUMIX", "Panasonic", "GH5M2", "Tether", "Camera", "UI Automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.3.1",
    "openai>=2.29.0",
    "pillow>=12.1.1",
    "pyautogui>=0.9.41,<0.9.42",
    "pynput>=1.7.6,<1.8.dev0",
    "windows-use>=0.7.65",
    "lybic-guiagents>=0.8.0",
]

[project.scripts]
lumix-tether = "main:cli"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["windows_use"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
